@startuml
'https://plantuml.com/class-diagram

abstract class GameTemplate {
    #setDifficulty():void
    #increaseDifficulty():void
    }

class Game_Simple {
    #setDifficulty():void
    #increaseDifficulty():void
}
class Game_Normal {
    #setDifficulty():void
    #increaseDifficulty():void
}
class Game_Difficult {
    #setDifficulty():void
    #increaseDifficulty():void
}
GameTemplate <|-- Game_Simple
GameTemplate <|-- Game_Normal
GameTemplate <|-- Game_Difficult
@enduml